--- a/Python/README
+++ b/Python/README
@@ -1,21 +1,22 @@
-Semantria is a text analytics and sentiment analysis API. It allows you to gain valuable insights from your unstructured text content.
-It is based on Lexalytics’ Salience – a text analytics and sentiment analysis engine.
-The same engine as the one being used by Oracle, Cisco, Thomson Reuters, Saleforce.com - Radian6, Visible, Lithium, and 50+ other leaders in the space.
+##Semantria Python SDK##
 
-Semantria offers Python SDK, that is the most convenient way to get started with the Semantria API on Python.
+[Semantria](https://semantria.com) is a **text analytics and sentiment analysis API**. It allows you to gain valuable insights from your unstructured text content by extracting categories, topics, themes, facets, and sentiment. It is based on [Lexalytics' Salience](http://www.lexalytics.com/technical-info/salience-engine-for-text-analysis) engine, which is used by Oracle, Cisco, Thomson Reuters, Saleforce.com - Radian6, Visible, Lithium, and 50+ other leaders in the space.
+
+[Semantria](https://semantria.com) offers **Python SDK**, that is the most convenient way to get started with the Semantria API on Python.
 SDK implements all the available Semantria features and demonstrate best practices of API usage for either Python 2.x or 3.x.
-A Free trial is available at http://www.semantria.com/trial
+A **free trial** is available at https://semantria.com/trial.
+Please visit out [developer portal](https://semantria.com/developer) for integration information.
 
-Functionality includes:
-	- Entity extraction (both model and dictionary based)
-	- Theme/keyword extraction
-	- Categorization/Classification (Query and Wikipedia ontology-based)
-	- Summarization
-	- Sentiment Analysis (document, entity, theme/keyword, and category level)
-	- Semantic Rollups (birds-eye view on your dataset, combining SPSS-like statistical analysis and full scale NLP approach)
-	- Full support of 5 languages (entity extraction, categorization, sentiment analysis, etc): English, French, Portuguese, Spanish, and German.
-	- Part of speech markup
+Features include
 
-Semantria also has a free Excel Add-In that let’s you process content from inside your Excel without any coding, integration work, etc.
-It is a fully functional API client with an easy to use API configuration GUI is available at http://www.semantria.com/excel
-An Excel Add-In demo overview, categorization tutorial, custom entities set-up, and sentiment adjustment video are all available at http://www.semantria.com/video
+- [Entity](https://semantria.com/technology/entity-extraction) extraction (both model and dictionary based)
+- [Theme/keyword](https://semantria.com/technology/themes) extraction
+- Categorization/Classification ([Query](https://semantria.com/technology/query-topics) and [Wikipedia ontology](https://semantria.com/technology/concept-matrix)-based)
+- [Summarization](https://semantria.com/technology/summarization)
+- [Sentiment Analysis](https://semantria.com/technology/sentiment-analysis) (document, entity, theme/keyword, and category level)
+- [Collections Mode](https://semantria.com/technology/collection-processing) (birds-eye view on your dataset, combining SPSS-like statistical analysis and full scale NLP approach)
+- [Supports 9 languages natively](https://semantria.com/features/multi-lingual-support) (entity extraction, categorization, sentiment analysis, etc): English, French, Portuguese, Spanish, German, Mandarin, Italian, Korean and Japanese.
+
+Semantria also offers a [free Excel Add-In](https://semantria.com/excel) that let's you process content directly from within Excel without any coding or integration work required. It is a fully functional API client with an easy to use GUI.
+
+Excel Add-In [video tutorials](https://semantria.com/video) are available to help get you started. They cover topics such as categorization, custom entities creation, sentiment adjustment and many more.
